--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div id="container">
-        <img id="imagem" src="C:\Users\User\OneDrive\Área de Trabalho\reconhecimento facial\face\urso.png" alt="Imagem do Funcionário">
+        <img id="imagem" src="C:\Users\User\OneDrive\Área de Trabalho\meme\urso.png" alt="Imagem do Funcionário">
         <p id="nome">Olá Chefe</p>
         <p id="texto-pedido">O SENHOR PODERIA POR GENTILEZA ME DA UM AUMENTO ?</p>
         <div id="botoes">
