--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <div id="container">
-        <img id="imagem" src="C:\Users\User\OneDrive\Área de Trabalho\meme\urso.png" alt="Imagem do Funcionário">
+        <img id="imagem" src="urso.png" alt="Imagem do Funcionário">
         <p id="nome">Olá Chefe</p>
-        <p id="texto-pedido">O SENHOR PODERIA POR GENTILEZA ME DA UM AUMENTO ?</p>
+        <p id="texto-pedido">O SENHOR PODERIA POR GENTILEZA ME DAR UM AUMENTO ?</p>
         <div id="botoes">
             <button class="botao botao-sim" onclick="clicarSim()">Claro!</button>
             <button class="botao botao-nao">Não</button> <!-- Removido o evento onclick do botão "Não" -->
